# rust-serverless-lambda

./: Cargo.toml  README.md
examples/kinesis-message-generator/: Cargo.toml  README.md
examples/kinesis-message-generator/src/: iot_device.rs  main.rs
examples/kinesis-message-processor/: Cargo.toml  README.md
examples/kinesis-message-processor/src/: event_handler.rs  shared.rs
examples/lambda-s3/: Cargo.toml  README.md
examples/lambda-s3-image/: Cargo.toml
examples/lambda-s3-image/src/: event_handler.rs  main.rs
examples/lambda-s3/src/: event_handler.rs  main.rs
examples/my-first-lambda/: Cargo.toml  Dockerfile  README.md
examples/my-first-lambda/src/: event_handler.rs  main.rs
examples/web-scraper/: Cargo.toml  README.md
examples/web-scraper/src/: common.rs  event_handler.rs  http_handler.rs  main.rs  mod.rs
