[package]
name = "rust-serverless-lambda"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["examples/*"]
resolver = "2"

[workspace.dependencies]
lambda_runtime = "0.13.0"
lambda_http = "0.14.0"
tokio = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
anyhow = "1"
async-compression = "0.3"
serde = "1"
serde_json = "1"
aws-sdk-s3 = "1"
aws-config = "1"
aws-sdk-config = "1"