[package]
name = "lambda-s3-image"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde-json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }