[package]
name = "lambda-s3"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = { workspace = true }
anyhow = { workspace = true }
async-compression = { workspace = true, features = ["tokio", "zstd"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] } 
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-config = { workspace = true }