[package]
name = "web-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = { workspace = true }
lambda_http = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = {workspace = true }
reqwest = "0.12.15"
scraper = "0.23.1"
prettytable = "0.10.0"
similar = "2.7.0"
